Revert long label filter fix
The horizontal scrollbar doesn't behave on all platforms is always
visible.

--- a/styles/labelFilter.less
+++ b/styles/labelFilter.less
@@ -106,10 +106,8 @@
     .label-filter {
       background: @navbar-label-filter-bg;
       float: left;
-      max-width: 100%;
       min-width: @label-filter-default-width;
       min-height: @navbar-input-height;
-      overflow-x: scroll;
       border: @navbar-menu-border;
       border-radius: @selectize-border-radius;
       .selectize-control {
